--- a/style.css
+++ b/style.css
@@ -7,14 +7,19 @@
 }
 
 .numberswrapper {
-  border: 1px solid green; /* Developer mode - remove before launch */
+  border: 1px solid rgb(89, 89, 89); /* Developer mode - remove before launch */
   width: 1000px;
   display: flex;
   flex-direction: row;
+  box-shadow: 5px 5px 15px rgb(156, 154, 154);
 }
 
 .number {
-  border: 1px solid red; /* Developer mode - remove before launch */
+  border: 1px solid rgb(156, 154, 154); /* Developer mode - remove before launch */
   width: 50px;
   height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
 }
