--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 }
 
 .number {
+  position: relative;
   border: 1px solid rgb(156, 154, 154); /* Developer mode - remove before launch */
   width: 50px;
   height: 50px;
@@ -26,4 +27,19 @@
 
 #globalMessage {
   height: 10px;
+}
+
+.leftCross {
+  position: absolute;
+  background-color: red;
+  height: 90%;
+  width: 2px;
+  transform: rotate(20deg);
+}
+.rightCross {
+  position: absolute;
+  background-color: red;
+  height: 90%;
+  width: 2px;
+  transform: rotate(-20deg);
 }
