--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: start;
   align-items: center;
 }
 
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: row;
   box-shadow: 5px 5px 15px rgb(156, 154, 154);
+  background-color: #eaffd0;
 }
 
 .number {
@@ -23,6 +24,24 @@
   justify-content: center;
   align-items: center;
   font-size: 12px;
+}
+input[type="password"],
+input[type="text"] {
+  background-color: #fce38a;
+  height: 40px;
+  border-radius: 5px;
+  margin: 5px;
+  text-align: center;
+}
+button {
+  background-color: #fce38a;
+  border: none;
+  border: 2px solid black;
+  height: 40px;
+  border-radius: 5px;
+  text-align: center;
+  width: 100px;
+  height: 45px;
 }
 
 #globalMessage {
