--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 .numberswrapper {
   border: 1px solid rgb(89, 89, 89); /* Developer mode - remove before launch */
-  width: 1000px;
+  width: 98vw;
   display: flex;
   flex-direction: row;
   box-shadow: 5px 5px 15px rgb(156, 154, 154);
