--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@
 }
 #guessInputForm {
   visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 input[type="password"],
@@ -46,6 +49,13 @@ button {
   text-align: center;
   width: 100px;
   height: 45px;
+}
+#resetBtn {
+  border: none;
+  border: 2px solid black;
+  height: 60px;
+  width: 250px;
+  visibility: hidden;
 }
 
 #globalMessage {
