--- a/style.css
+++ b/style.css
@@ -26,10 +26,15 @@
   font-size: 12px;
 }
 #guessInputForm {
+  width: 100%;
   visibility: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#guessInput {
+  margin-left: 0px;
 }
 
 input[type="password"],
@@ -54,7 +59,8 @@ button {
   border: none;
   border: 2px solid black;
   height: 60px;
-  width: 250px;
+  width: 100%;
+  padding: 0;
   visibility: hidden;
 }
 
