jeg orker ikke mere

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 
 input[type="password"],
 input[type="text"] {
-  background-color: #fce38a;
+  background-color: #fffbed;
   height: 40px;
   border-radius: 5px;
   margin: 5px;
