--- a/style.css
+++ b/style.css
@@ -80,3 +80,33 @@ button {
   width: 2px;
   transform: rotate(-20deg);
 }
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) {
+  .main {
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    border: 1px solid red;
+  }
+  .numberswrapper {
+    border: 1px solid red; /* rgb(89, 89, 89) */ /* Developer mode - remove before launch */
+    width: 500px;
+    height: 200px;
+    display: flex;
+    flex-direction: row;
+    box-shadow: 5px 5px 15px rgb(156, 154, 154);
+    background-color: #eaffd0;
+  }
+  .number {
+    position: relative;
+    border: 1px solid rgb(156, 154, 154); /* Developer mode - remove before launch */
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+  }
+}
