--- a/style.css
+++ b/style.css
@@ -88,14 +88,14 @@ button {
     flex-direction: column;
     justify-content: start;
     align-items: center;
-    border: 1px solid red;
   }
   .numberswrapper {
-    border: 1px solid red; /* rgb(89, 89, 89) */ /* Developer mode - remove before launch */
-    width: 500px;
-    height: 200px;
+    border: 1px solid rgb(89, 89, 89); /* Developer mode - remove before launch */
+    width: 550px;
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
     box-shadow: 5px 5px 15px rgb(156, 154, 154);
     background-color: #eaffd0;
   }
@@ -103,10 +103,12 @@ button {
     position: relative;
     border: 1px solid rgb(156, 154, 154); /* Developer mode - remove before launch */
     width: 50px;
+    min-width: 50px;
     height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 12px;
+    margin-top: 5px;
   }
 }
