--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ button {
   }
   .numberswrapper {
     border: 1px solid rgb(89, 89, 89); /* Developer mode - remove before launch */
-    width: 550px;
+    width: 650px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -109,6 +109,6 @@ button {
     justify-content: center;
     align-items: center;
     font-size: 12px;
-    margin-top: 5px;
+    margin: 5px;
   }
 }
