--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: start;
   align-items: center;
+  background-color: #fffbed;
 }
 
 .numberswrapper {
@@ -89,10 +90,11 @@ button {
     flex-direction: column;
     justify-content: start;
     align-items: center;
+    background-color: #fffbed;
   }
   .numberswrapper {
     border: 1px solid rgb(89, 89, 89); /* Developer mode - remove before launch */
-    width: 650px;
+    width: 85%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -106,6 +108,37 @@ button {
     width: 50px;
     min-width: 50px;
     height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    margin: 5px;
+  }
+}
+@media only screen and (min-device-width: 300px) and (max-device-width: 767px) and (-webkit-min-device-pixel-ratio: 3) {
+  .main {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    background-color: #fffbed;
+  }
+  .numberswrapper {
+    border: 1px solid rgb(89, 89, 89); /* Developer mode - remove before launch */
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    box-shadow: 5px 5px 15px rgb(156, 154, 154);
+    background-color: #eaffd0;
+  }
+  .number {
+    position: relative;
+    border: 1px solid rgb(156, 154, 154); /* Developer mode - remove before launch */
+    min-width: 50px;
+    height: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
