--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 .numberswrapper {
   /*   border: 1px solid rgb(89, 89, 89); /* Developer mode - remove before launch */
   height: 100vh;
+  width: 75vw;
   /*   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -18,6 +19,9 @@
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   gap: 0px 0px;
+  height: calc(50vh - 10px);
+  justify-items: center;
+  align-items: center;
   grid-template-areas:
     ". . . . . . . . . ."
     ". . . . . . . . . ."
@@ -149,6 +153,9 @@ button {
   .numberswrapper {
     border: 1px solid rgb(89, 89, 89); /* Developer mode - remove before launch */
     width: 90%;
+    height: calc(100vh - 10px);
+    justify-items: center;
+    align-items: center;
     /*     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
